<?xml version="1.0"?>
<package>
  <name>turtlebot3_msgs</name>
  <version>0.1.4</version>
  <description>
    Message and service types: custom messages and services for TurtleBot3 packages
  </description>
  <license>Apache License 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_msgs/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_msgs</url>
  <url type="website">http://wiki.ros.org/turtlebot3_msgs</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
