<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_msgs</name>
  <version>0.1.5</version>
  <description>
    Message and service types: custom messages and services for TurtleBot3 packages
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_msgs/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_msgs</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
