<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_msgs</name>
  <version>2.4.0</version>
  <description>
    Message and service types: custom messages and services for TurtleBot3 packages for ROS 2
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_msgs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_msgs/issues</url>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="vgh@amazon.com">Vineet Ghatge</author>
  <author>Ryan Shim</author>
  <author email="willson@robotis.com">Will Son</author>
  <author email="junyeong4321@gmail.com">Junyeong Jeong</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>action_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
